// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.workloadidentity.v1;

import "google/protobuf/timestamp.proto";
import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/workloadidentity/v1;workloadidentityv1";

// WorkloadIdentityX509Revocation represents the revocation of a single X509
// workload identity credential. Creating or deleting these resources triggers
// the regeneration of the trust domain CRL.
//
// The name of a WorkloadIdentityX509Revocation must be the base16, lower case,
// encoded serial number of the revoked X509 certificate. Therefore, only a
// single revocation entry can exist for a given certificate.
message WorkloadIdentityX509Revocation {
  // The kind of resource represented. For WorkloadIdentityX509Revocation
  // resources, this is always `workload_identity_x509_revocation`.
  string kind = 1;
  // Differentiates variations of the same kind. All resources should
  // contain one, even if it is never populated.
  string sub_kind = 2;
  // The version of the resource being represented.
  string version = 3;
  // Common metadata that all resources share.
  teleport.header.v1.Metadata metadata = 4;
  // The configured properties of the WorkloadIdentityX509Revocation
  WorkloadIdentityX509RevocationSpec spec = 5;
}

// Configuration specific to WorkloadIdentityX509Revocation.
message WorkloadIdentityX509RevocationSpec {
  // Describes why this revocation entry was created.
  // Required.
  string reason = 1;
  // The time at which the revocation entry was created.
  // Required.
  google.protobuf.Timestamp revoked_at = 2;
}
